--- a/application/modules/default/views/scripts/product/partials/productRating.phtml
+++ b/application/modules/default/views/scripts/product/partials/productRating.phtml
@@ -39,7 +39,7 @@
 		</a>
 	</span>
 	  <span class="small light lightgrey product-update-date"> <?=$this->printDate($this->productRating['created_at']) ?> </span>
-	  <span style="color:#4e4e4e"> <?php 
+	  <span> <?php 
 	  	
 	  	if($this->productRating['member_id']==0 ){
 	  	     // import from Hive sum vote
