--- a/application/modules/default/views/scripts/explore/partials/products.phtml
+++ b/application/modules/default/views/scripts/explore/partials/products.phtml
@@ -54,7 +54,7 @@ foreach ($this->products as $this->product) {
         </h3>
        
         <b style="display: block; margin-bottom: 5px"><?php echo $this->product->cat_title?></b>
-        <b style="display: block; margin-bottom: 5px" class="small">by <a href="<?php echo $this->buildMemberUrl($this->product['member_id'])?>"><?php echo $this->product['username']?></a></b>
+        <b style="display: block; margin-bottom: 5px" class="small">by <a href="<?php echo $this->buildMemberUrl($this->product->member_id)?>"><?php echo $this->product->username?></a></b>
         <div style="display: block; float: left">
          <?php           
           $type = $this->FetchProjectPackageTypes($this->product->project_id);
