--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -70,6 +70,9 @@ if (Zend_Auth::getInstance()->hasIdentity()){
 } 
 
 ?>
+<style type="text/css">
+    
+</style>
     <!-- facebook -->
     <div id="fb-root"></div>
 
