--- a/application/modules/default/views/scripts/product/partials/productRating.phtml
+++ b/application/modules/default/views/scripts/product/partials/productRating.phtml
@@ -21,10 +21,13 @@
  **/
 ?>
 
-<button id="showRatingInactive" class="pull-right">Show all Reviews</button>
+<button id="showRatingAll" class="pull-right">Show all Reviews</button>
+<button id="showRatingActive" class="pull-right">Show Active Reviews</button>
+<button id="showRatingUpvotes" class="pull-right">Show only Upvotes</button>
+<button id="showRatingDownvotes" class="pull-right">Show only Downvotes</button>
 <?php  foreach ($this->ratings as $this->productRating) {
 	?>
-<div class="productRating-rows <?=$this->productRating['rating_active']==0?'productRating-rows-inactive':''?>">
+<div class="productRating-rows <?=$this->productRating['rating_active']==0?'productRating-rows-inactive':'productRating-rows-active'?>  <?=$this->productRating['user_like']==1?'clsUpvotes':'clsDownvotes' ?> "  >
 	<h3 class="product-heading product-update-heading" >
 	<a href="<?php echo $this->buildMemberUrl($this->productRating['member_id']); ?>">
 	<img class="userimg"  
