--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5615,7 +5615,11 @@ main#plings-page{
     -ms-user-select: none;
     user-select: none;
     background-image: none;
-    border: 1px solid #ccc;
+    border: 1px solid #adadad;
     border-radius: 4px;
     margin-right:10px;    
   }
+
+.btn-default:focus{    
+    background-color: transparent;   
+}
