--- a/application/modules/default/views/scripts/product/partials/productRating.phtml
+++ b/application/modules/default/views/scripts/product/partials/productRating.phtml
@@ -19,12 +19,17 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+
+$cntActive = 0;
+ foreach ($this->ratings as $this->productRating) { 
+ 	if($this->productRating['rating_active']==1) $cntActive =$cntActive+1;
+ }
 ?>
 
-<button id="showRatingAll" class="pull-right bbtn btn-default">Show all Reviews</button>
-<button id="showRatingActive" class="pull-right bbtn btn-default">Show Active Reviews</button>
-<button id="showRatingUpvotes" class="pull-right bbtn btn-default">Show <span class="glyphicon glyphicon-thumbs-up " style="color:green"> </span></button>
-<button id="showRatingDownvotes" class="pull-right bbtn btn-default">Show <span class="glyphicon glyphicon-thumbs-down " style="color:red"> </span></button>
+<button id="showRatingAll" class="pull-right bbtn btn-default btnRateFilter">Show all Reviews (<?=count($this->ratings) ?>)</button>
+<button id="showRatingActive" class="pull-right bbtn btn-default btnRateFilter active">Show Active Reviews (<?=$cntActive ?>)</button>
+<button id="showRatingUpvotes" class="pull-right bbtn btn-default btnRateFilter">Show (<?=$this->product->count_likes ?>) <span class="glyphicon glyphicon-thumbs-up " style="color:green"> </span></button>
+<button id="showRatingDownvotes" class="pull-right bbtn btn-default btnRateFilter">Show (<?=$this->product->count_dislikes ?>)  <span class="glyphicon glyphicon-thumbs-down " style="color:red"> </span></button>
 <?php  foreach ($this->ratings as $this->productRating) {
 	?>
 <div class="productRating-rows <?=$this->productRating['rating_active']==0?'productRating-rows-inactive':'productRating-rows-active'?>  <?=$this->productRating['user_like']==1?'clsUpvotes':'clsDownvotes' ?> "  >
