--- a/application/modules/default/views/scripts/settings/partials/payment.phtml
+++ b/application/modules/default/views/scripts/settings/partials/payment.phtml
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <p class="italic">
-                        <?= $this->translate('Here are the settings for accepting donations. If this option is left empty, people cannot pling money to your products.') ?>
+                        <?= $this->translate('Here are the settings for accepting donations. If these options are empty, we cannot payout the plings for your products.') ?>
                     </p>
                 </div>
             </div>
