--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -53,7 +53,7 @@ $userRoleName = $helperUserRole->userRole();
     </div>
 
     <div class="row">
-        <span class=" col-lg-5">page views</span>
+        <span class=" col-lg-5">page views today</span>
         <span class="col-lg-7 value"> <?= $this->product_views ?></span>
     </div>
     
