--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -571,7 +571,7 @@
                                  var oldNewCounter = parseInt(fileCount) + parseInt(<?= $this->product->count_downloads_hive?>)
                                  $('#download_counter_'+ oldestFileId).html(oldNewCounter);
 
-                                 $('#downloadscnt').html(downloaded_count_total);
+                                //$('#downloadscnt').html(downloaded_count_total);
 
                                  $pploadCollection.find('table[data-ppload-files] tfoot').append(
                                      '<tr>'
