backend: paypal valid status

--- a/application/modules/backend/views/scripts/user/index.phtml
+++ b/application/modules/backend/views/scripts/user/index.phtml
@@ -193,7 +193,7 @@
                     width: '5%',
                     //options: {'': '', '0': '0 - New', '100': '100 - Valid', '500': '500 - Invalid', '501': '501 - Can only receive money from homepage', '502': '502 - Can not receive personal payments', '503': '503 - This recipient is currently unable to receive money'},
                     <?php 
-                        $optionString = "";
+                        $optionString = "'':'',";
                         $paypalValidStatusModel = new Default_Model_DbTable_PaypalValidStatus();
                         $list = $paypalValidStatusModel->getStatiForSelectList();
                         foreach ($list as $key => $value) {
