backend: add paypal-address-list

--- a/application/modules/backend/views/scripts/paypalvalidstatus/index.phtml
+++ b/application/modules/backend/views/scripts/paypalvalidstatus/index.phtml
@@ -43,7 +43,7 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                 listAction: '/backend/paypalvalidstatus/list',
                 createAction: '/backend/paypalvalidstatus/create',
                 updateAction: '/backend/paypalvalidstatus/update',
-                deleteAction: '/backend/paypalvalidstatus/delete'
+                //deleteAction: '/backend/paypalvalidstatus/delete'
             },
             fields: {
                 id: {
